--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest",
-    "start": "npx prisma generate && nodemon index.js",
-    "build": "prisma generate"
+    "start": "npx prisma generate && nodemon index.js"
   },
   "keywords": [],
   "author": "",
