--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/webhook", "destination": "api/webhook.py" }],
+  "rewrites": [
+    {
+      "source": "/webhook",
+      "destination": "api/webhook.py"
+    }
+  ],
   "builds": [
     {
       "src": "index.js",
