--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
-  "rewrites": [
-    {
-      "source": "/webhook",
-      "destination": "api/webhook.py"
-    }
-  ],
   "builds": [
     {
       "src": "index.js",
       "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
     }
   ]
 }
